# cwal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
.cache/clangd/index/: main.cpp.1D592CAF43460839.idx  palette.cpp.FAD9CA2EC00A6A99.idx  palette.hpp.B36B5231C722E73B.idx
include/: palette.hpp
src/: main.cpp  palette.cpp
